Waitlist updated with setters and parameterless constructor. Table created for WaitlistEntity and WaitlistMapper created