@@ -1,22 +1,50 @@
 package com.thws.eventmanager.infrastructure.components.persistence.entities;
 
+import jakarta.persistence.*;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 // TODO: create a table for this entity
+@Entity
+@Table(name = "waitlist")
 public class WaitlistEntity implements PersistenceEntity {
-    private final String eventId;
-    private final List<UserEntity> userEntities;
+    @Id
+    @GeneratedValue (strategy = GenerationType.IDENTITY)
+    private Long id;
 
+    @OneToOne
+    @JoinColumn(name = "event_id", nullable = false, unique = true)
+    private EventEntity event;
 
-    public WaitlistEntity(String eventId) {
-        this.eventId = eventId;
-        this.userEntities = new ArrayList<>();
+    @OneToMany(cascade = CascadeType.MERGE)
+    @JoinColumn(name = "waitlist_id")
+    private List<UserEntity> userEntities = new ArrayList<>();
+
+    public WaitlistEntity() {}
+
+    public WaitlistEntity(EventEntity event) {
+        if (event == null) {
+            throw new IllegalArgumentException("Event cannot be null");
+        }
+        this.event = event;
     }
 
-    public String getEventId() {
-        return eventId;
+    public Long getId() {
+        return id;
+    }
+
+    public EventEntity getEvent() {
+        return event;
+    }
+
+    public void setEvent(EventEntity event) {
+        this.event = event;
+    }
+
+    public void setUserEntities(List<UserEntity> userEntities) {
+        this.userEntities = userEntities;
     }
 
     public List<UserEntity> getUsers() {
@@ -35,6 +63,6 @@ public class WaitlistEntity implements PersistenceEntity {
     }
 
     public UserEntity getFirstUser() {
-        return userEntities.isEmpty() ? null : userEntities.get(0);
+        return userEntities.isEmpty() ? null : userEntities.getFirst();
     }
 }
